--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,4 +33,5 @@ jobs:
       with:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
+        tags: latest
         labels: ${{ steps.meta.outputs.labels }}
