--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -44,5 +44,5 @@ jobs:
         context: .
         push: ${{ github.event_name != 'pull_request' }}
         tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels })
+        labels: ${{ steps.meta.outputs.labels }}
       if: steps.check.outputs.needs-updating == 'true'
